Atividades relacionadas: Nas informações da NC, o número da op, pc,pc,cc e nf-e está aparecendo mas está sem título. Além disso deve ser posicionado em linha; No plano de ação não deve ser permitido a inserção de data de prazo de uma ação menor que o dia atual.; Ao remover uma reincidencia a mensagem que deve aparecer é "Reincidência removida com sucessa" e a cor deve ser verde e não azul; Tela de Fechamento já está abrindo com o box “Sim” marcado. Deve abrir com o botão Fechar desabilitado.

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -612,6 +612,8 @@
   "sgq": {
     "number": "Número",
     "success": "Avaliação salva com sucesso",
+    "successCreate": "Avaliação SGQ criada com sucesso.",
+    "fail": "Houve um erro ao criar Avaliação SGQ.",
     "openingDate": "Data de Abertura",
     "closingDate": "Data de Fechamento",
     "checkEffectiveness": "Verificação de eficácia",
@@ -631,7 +633,8 @@
         "addReocurrenceSubtitle": "Busque por NCs que reincidam a ",
         "addReocurrenceInputPlaceholder": "Busque por produto, parceiro ou descrição da NC...",
         "searchResults": "Resultados da busca",
-        "searchResultsLabel": "Sinalize as NCs que são reincidentes desta NC."
+        "searchResultsLabel": "Sinalize as NCs que são reincidentes desta NC.",
+        "successDel": "Reincidência removida com sucesso"
       },
       "step2": {
         "descriptionNotification": "Visualize e adicione contatos a serem notificados acerca do andamento desta NC. Por padrão, são adicionados contatos já incluidos nos passos anteriores.",
