--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -563,8 +563,8 @@
     "title1": "Número de Ncs x Custo Total",
     "cost": "Custos",
     "amount": "Quantidade",
-    "title2": "Departamento/Setor x Quantidade de NCs Recebida e Quantidade de NCs Emitida.",
-    "title3": "Evolução Anual do Número de NCS",
+    "title2": "Status do Plano de Ação x Setor/Departamento e Tipo de NC.",
+    "title3": "Evolução Anual do Número de NCs",
     "ncAmount": "Quantidade de ncs",
     "title4": "Departamento Emissor x Quantidade de Ncs",
     "title5": "Número de Ncs x Custo Total",
