--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -248,8 +248,10 @@
         "titleNC": "Identificação da NC",
         "subtitle": "Preencha os campos abaixo com as informações da NC",
         "type": "Tipo de NC *",
+        "typeLabel":"Tipo de NC",
         "segment": "Segmento de Auditoria",
         "sector": "Setor/Local Afetado *",
+        "sectorLabel": "Setor Afetado",
         "dateOpen": "Data de Abertura",
         "dateOpenDesc": "Altere a data caso a NC tenha acontecido antes deste cadastro.",
         "dateClose": "Prazo de Fechamento",
