troquei a coluna setor afetado para parceiro na listagem de ncs

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -596,7 +596,7 @@
     "column1": "Número",
     "column2": "Emissor",
     "column3": "Tipo de NC",
-    "column4": "Setor Afetado",
+    "column4": "Parceiro",
     "column5": "Produto",
     "column6": "Status",
     "moreInfoBtn": "Ver informações da NC",
